--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod --base-href  https://RandyCan2000.github.io/Radio/ && angular-cli-ghpages --branch gh-pages"
+    "deploy": "ng build --prod --base-href https://RandyCan2000.github.io/Radio/",
+    "updatePage":"npx ngh --dir=dist/RadioPage"
   },
   "private": true,
   "dependencies": {
